[package]
name = "hyperjson5"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>", "Martin Quarda <martin@quarda.cz>"]
description = "A hyper-fast Python module for reading/writing JSON5 data"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Hinogary/hyperjson5"
homepage = "https://github.com/Hinogary/hyperjson5"
readme = "README.md"
keywords = ["fast", "json", "python", "json5"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[dependencies]
json5 = "0.4.1"
serde_json = "1.0.107"
failure = "0.1.8"
serde = "1.0.188"
serde_derive = "1.0.188"
pyo3 = "0.19.2"

[lib]
name = "hyperjson5"
crate-type = ["rlib", "cdylib"]

[features]
# We must make this feature optional to build binaries such as the profiling crate
default = ["pyo3/extension-module"]


[profile.release]
codegen-units = 1
debug = false
# incremental = false
lto = true
opt-level = 3
