[tool.poetry]
name = "hyperjson5"
version = "0.1.0"
description = "A hyper-fast Python module for reading/writing JSON data"
authors = ["Matthias Endler <matthias-endler@gmx.net>", "Martin Quarda <martin@quarda.cz>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Hinogary/hyperjson5"
keywords = ["json", "parser", "fast", "json5"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pylint = "^2.6"
flake8 = "^3.9"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "*"
simplejson = "*"
ujson = "*"
orjson = { version = "*", markers = "python_version < '3.8'" }
python-rapidjson = "*"
hypothesis = "*"
autopep8 = "*"
maturin = "==0.9.4"
